# python-project-lvl1

./: .codeclimate.yml  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: Questions.py  cli.py  engine.py  salute.py
brain_games/games/: Calc.py  Gcd.py  Prime.py  Progression.py  Questions.py  __init__.py  calc.py  gcd.py  prime.py  progression.py  questions.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_main.py  brain_prime.py  brain_progression.py
