[tool.poetry]
name = "GreyWolf_brain_games"
version = "0.1.3.1"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"