[tool.poetry]
name = "GreyWolf_Brain_Games"
version = "0.1.4.2"
description = ""
authors = ["GreyGreyWolf <wolfdieattheend@yandex.ru>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.7.3"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
